[package]
name = "redox_hwio"
version = "0.1.6"
edition = "2018"
description = "Rust Hardware MMIO and PIO"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/hwio"

[lib]
name = "hwio"

[dependencies]
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["std"]
stable = []
std = ["lazy_static"]
